[project]
name = "hybrid-a-star"
version = "0.1.0"
description = "Hybrid A* path planning implementation"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
